deployment/starbucks-worker/deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: starbucks-worker-pod
  namespace: default
spec:
    containers:
    - name: starbucks-worker
      image: reddesigns/starbucks-worker:v5.0
      ports:
      - containerPort: 6060
