deployment/starbucks-worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-worker-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 6060
  selector:
    name: spring-worker
